--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "flowbite-react": "^0.10.2",
     "keen-slider": "^6.8.6",
     "react": "^18.3.1",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
