--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "19.2.3",
     "react-countup": "^6.5.3",
     "react-dom": "19.2.3",
-    "react-intersection-observer": "^10.0.2"
+    "react-intersection-observer": "^10.0.2",
+    "resend": "^6.9.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
