--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^7.2.0",
     "@fortawesome/free-solid-svg-icons": "^7.2.0",
     "@fortawesome/react-fontawesome": "^3.2.0",
+    "axios": "^1.13.6",
     "framer-motion": "^12.34.0",
     "lottie-react": "^2.4.1",
     "next": "16.1.6",
